Added or changed endnotes in files listed below; added to toDo.tex 	Modified   background.tex 	Modified   embedding.tex 	Modified   multiparadigm.tex 	Modified   proposedWork.tex 	Modified   proto1.tex 	Modified   workCompleted.tex
There are also a few TeX changes that I just went ahead and made.

--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -65,8 +65,11 @@ discussed below, along with their shortcomings.
   embeddings mentioned above.
   Some are more feature rich than others; that is, some have practical \progLang{Prolog} concepts,
   but are still not complete.\endnote{%
-    Did I get your sense?
-    \mehul{I do not understand}
+    Did I get your sense?\newline
+    \mehul{I do not understand}\newline
+    \david{I edited here: did I get it right?
+      See commit \texttt{24dd4b09dbb8aa7e}.
+    }
 }
 
 \item
@@ -89,8 +92,19 @@ crossover implementations exist but again most of them have faded out.\endnote{%
 }
 
 As discussed in the above,\endnote{%
-  Which sections above?  Use \macroName{label} and \macroName{ref}
-  to say precisely which.
+  \vspace*{-2\baselineskip}
+  \begin{compactdesc}
+  \item []
+    Which sections above?  Use \macroName{label} and \macroName{ref}
+    to say precisely which.
+  \item [2016-01-16]
+    You removed ``sections'', but you still do not say \textit{where}
+    above.
+    \begin{compactitem}
+    \item Two paragraphs above?
+    \item In Section~\ref{sec:what-this-chapter:proposedWork}?
+    \end{compactitem}
+  \end{compactdesc}
 }
 either an embedding or an integration approach is taken up for programming
 languages to work together.
@@ -103,7 +117,9 @@ Mostly, the trend is to build a library for extension to replicate the features 
   \mehul{too deep == too complex, too shallow == does not do much, mix == a little better I guess?}
 }
 
-Taking into consideration above, there is quite some room for improvement and additions.
+Taking into consideration above, there is quite some room for improvement and additions.\endnote{%
+  Try completely rephrasing this sentence.
+}
 \section{Proposal Contributions}
 
 Moving onto what this thesis shall explore, first thing's first a complete, fully functional library which comes
