--- a/toDo.tex
+++ b/toDo.tex
@@ -111,7 +111,7 @@
   \item
     ``\textit{meta-syntactic}''
   \end{compactitem}
-
+\item Check for ``add on'' versus ``add-on'' and decide which is correct.
 \end{enumerate}
 
 \section{Editing suggestions from David}\label{sec:edit-sugg-david}
