--- a/workCompleted.tex
+++ b/workCompleted.tex
@@ -168,7 +168,7 @@ type Expr = Fix ExprF
 
 \item[Any other benefits]
 Writing functions is simpler. You can have the terms of all depths encapsulated under the same type, i.e.
-\mint{haskell}|Fix ExprF|
+\mint{haskell}|Fix ExprF|\yyy{}{\Huge .}
 So rather than writing separate functions for,
 \begin{minted}[linenos]{haskell}
 (ExprF a)
