--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -160,12 +160,23 @@ release back in 2001.\endnote{%
     though it last saw a release back in 2001.
   \end{quote}
 }
-Another prominent implementation is \progLang{OCaml} \cite{website:ocamlwiki,website:ocamllang} which adds object
-oriented capabilities with a powerful type system and module support.
+as object oriented programming has been \yyy{one of the most}{a} dominant styles of programming\yyy{ and
+hence even}{Even} \progLang{Haskell} has one called \progLang{O'Haskell} \cite{website:ohaskell}\yyy{}{\Large,}\endnote{%
+  Add the comma, then remove this endnote.
+} though it last saw a
+release back in 2001.
+Another prominent implementation is \progLang{OCaml} \cite{website:ocamlwiki,website:ocamllang}\yyy{}{\Large,}\endnote{%
+  Add the comma, then remove this endnote.
+} which adds object
+oriented capabilities \yyy{with}{to} a powerful type system and module support.
 This is the case with most of the languages in this section hardly a few have survived as the new ones incorporated
-the positives of the old.
-As mentioned before one of the most poplar \cite{website:langpop} and widely usage both in academia and industry is
-the \progLang{Scala} \cite{website:scala} programming language stands out.
+the positives of the old.\endnote{%
+  I do not understand the preceding sentence at all.
+}
+As mentioned before\yyy{}{\Large,}\endnote{%
+  Add the comma, then remove this endnote.
+} one of the most poplar \cite{website:langpop} and widely \yyy{usage}{used} both in academia and industry is
+the \progLang{Scala} \cite{website:scala} programming language\xxx{ stands out}.
 
 
 \section{Functional Logic Programming Languages}
