--- a/background.tex
+++ b/background.tex
@@ -17,11 +17,9 @@
 
 Programming languages fall into different categories also known as ``paradigms''.
 They exhibit different characteristics according to the paradigm they fall into.
-It has been argued \cite{Krishnamurthi:2008:TPL:1480828.1480846} that
-rather than classifying a language into a particular paradigm,
-it is
-more accurate that a language exhibits a set of characteristics from a
-number of paradigms.
+It has been argued \cite{Krishnamurthi:2008:TPL:1480828.1480846} that rather than classifying a language into a
+particular paradigm, it is more accurate that a language exhibits a set of characteristics from a number of
+paradigms.
 The broader the scope of a language, the broader is the versatility in solving problems.
 
 Programming Languages\endnote{%
@@ -29,11 +27,11 @@ Programming Languages\endnote{%
   \mehul{none at the moment but I will change certain capitals to small}
 }\elabel{caps-choices} that fall into the same family, in our case declarative programming languages, can be of
 different paradigms and can have very contrasting, conflicting characteristics and behaviours.
-The two most important ones in the family of declarative languages are the Functional\eref{caps-choices} and Logical\eref{caps-choices} style of
-programming.
+The two most important ones in the family of declarative languages are the Functional\eref{caps-choices} and
+Logical\eref{caps-choices} style of programming.
 
-Functional Programming\eref{caps-choices}, \cite{hughes1989functional} gets its name as the fundamental concept is to apply
-mathematical functions to arguments to get results.
+Functional Programming\eref{caps-choices}, \cite{hughes1989functional} gets its name as the fundamental concept is
+to apply mathematical functions to arguments to get results.
 A program itself consists of functions and functions only which when applied to arguments produce results without
 changing the state that is values on variables and so on.
 Higher order functions allow functions to be passed as arguments to other functions.
@@ -43,8 +41,8 @@ and substitution.
 It can be thought as the smallest programming language \cite{rojas2004tutorial}, a single rule and a single
 function definition scheme.
 In particular there are typed and untyped $\lambda$-calculi.
-In untyped $\lambda$-calculi functions have no predetermined type, whereas typed $\lambda$-calculi puts
-restriction on what sort (type) of data can a function work with.
+In untyped $\lambda$-calculi functions have no predetermined type, whereas typed $\lambda$-calculi puts restriction
+on what sort (type) of data can a function work with.
 \progLang{Scheme} is based on the untyped variant, while \progLang{ML} and \progLang{Haskell} are based on typed
 $\lambda$-calculi.
 Most typed $\lambda$-calculi langauges are based on Hindley-Milner or Damas-Milner or Damas-Hindley-Milner
@@ -63,9 +61,9 @@ Most typed $\lambda$-calculi langauges are based on Hindley-Milner or Damas-Miln
     system\yyy{}{s}.}'' 
 }
 The Hindley-Milner\yyy{ }{-}like type systems have the ability to give a most general type \yyy{of}{to} a program
-without any annotations. 
+without any annotations.
 The algorithm \cite{website:hdmtypesystem} works by initially assigning undefined types to all inputs, next check
-the body of the function for operations that impose type constraints and go on mapping the types of each of the
+the body of the function for operations that impose type constraints and go on mapping the types of each of the 
 variables, lastly unifying all of the constraints giving the type of the result.\endnote{%
   \david{What is the relevance of this \P{} to the thesis?}\newline
   \mehul{To explain the working, not directly required I guess but since \progLang{Haskell} is statically
@@ -107,12 +105,11 @@ Some of the dissimilarities between the languages are:
 \item \progLang{Haskell} is all about functions while \progLang{Prolog} is on Horn clause logic.
 \end{enumerate} 
 
-\progLang{Prolog} \cite{wikiprolog}, being one of the most dominant logic programming
-languages, has  
-spawned a number of distributions and is present from academia to industry.  
+\progLang{Prolog} \cite{wikiprolog}, being one of the most dominant logic programming languages, has spawned a
+number of distributions and is present from academia to industry.
 
-\progLang{Haskell} is one the most popular \cite{website:langpop} functional languages around and is the 
-first language to incorporate \haskellConstruct{monads} \cite{wadler1992comprehending} for safe input and output.
+\progLang{Haskell} is one the most popular \cite{website:langpop} functional languages around and is the first
+language to incorporate \haskellConstruct{monads} \cite{wadler1992comprehending} for safe input and output.
 \haskellConstruct{Monads}\endnote{%
   Here ``monad'' is an (admittedly technical) English word.
   It doesn't need special marking.
@@ -131,17 +128,16 @@ outside the language but can be brought together with pure functions inside in a
 and maintaining safety with practicality.
 \progLang{Haskell} computes results lazily and is strongly typed.
 
-\progLang{Prolog} and \progLang{Haskell} are contrasting in nature, and
-bringing them into the same environment is tricky.
+\progLang{Prolog} and \progLang{Haskell} are contrasting in nature, and bringing them into the same environment is
+tricky.
 The differences in typing, execution, working among others lead to an altogether mixed bag of properties.
 
 
-The selection of the target language is not uncommon:
-\progLang{Prolog} seems to be the all time favourite for ``let's implement \progLang{Prolog} in the language X for
-proving its power and expressibility''.
-The \progLang{Prolog} language has been partially implemented \cite{swipembedd} in other 
-languages such as \progLang{Scheme} \cite{racklog}, \progLang{Lisp}  
-\cite{komorowski1982qlog,robinson1982loglisp,robinson1980loglisp}, \progLang{Java} \cite{wikiprolog, jlog}, 
+The selection of the target language is not uncommon: \progLang{Prolog} seems to be the all time favourite for
+``let's implement \progLang{Prolog} in the language X for proving its power and expressibility''.
+The \progLang{Prolog} language has been partially implemented \cite{swipembedd} in other languages such as
+\progLang{Scheme} \cite{racklog}, \progLang{Lisp}
+\cite{komorowski1982qlog,robinson1982loglisp,robinson1980loglisp}, \progLang{Java} \cite{wikiprolog, jlog},
 \progLang{JavaScript} \cite{jscriptlog} and the list \cite{yieldprolog} goes on.
 
 The technique of embedding is a shallow one.
@@ -152,23 +148,22 @@ Over time there has been an approach that branches out, which is paradigm integr
 A lot of work has been done on Unifying the Theories\eref{caps-choices} of Programming\eref{caps-choices}
 \cite{DBLP:conf/utp/2006,DBLP:conf/utp/2008,DBLP:conf/utp/2010,DBLP:conf/utp/2012,hoare1998unifying,
   gibbons2013unifying}.
-Hybrid languages that have characteristics from more than one paradigm are coming into the
-mainstream.
-One of the more successful attempts is \progLang{Scala} \cite{website:scala}. Simply speaking it is like a \textit{functional} 
-\progLang{Java} providing side-effect free programming environment along with
-\progLang{Java}-like features.
+Hybrid languages that have characteristics from more than one paradigm are coming into the mainstream.
+One of the more successful attempts is \progLang{Scala} \cite{website:scala}.
+Simply speaking it is like a \textit{functional} \progLang{Java} providing side-effect free programming environment
+along with \progLang{Java}-like features.
 
 Before moving on, let us take a look at some terms related to the content above.
 To begin with foreign function interfaces (FFI) \cite{website:ffiwiki}, a mechanism by which a program written in
-one programming language can make use of services written in another.\eref{not-a-sentence}
-For example, a function written in \progLang{C} can be called within a program written in \progLang{Haskell} and
-vice versa through the FFI mechanism.
+one programming language can make use of services written in another.\eref{not-a-sentence} For example, a function
+written in \progLang{C} can be called within a program written in \progLang{Haskell} and vice versa through the FFI
+mechanism.
 Currently the \progLang{Haskell} foreign function interface works only for one language.
 Another notable example is the common foreign function interface (CFFI) \cite{website:commonlisp} for
 \progLang{Lisp} which provides fairly complete support for \progLang{C} functions and data.
-As yet another example,
-\progLang{Java} provides the java native interface(JNI) for the working with other languages.
-Moreover there are services that provide a common platform for multiple languages to work with each other. 
+As yet another example, \progLang{Java} provides the java native interface(JNI) for the working with other
+languages.
+Moreover there are services that provide a common platform for multiple languages to work with each other.
 They can be termed as multilingual run-times\endnote{%
   I am not sure which of 
   \begin{compactitem}
@@ -181,8 +176,7 @@ They can be termed as multilingual run-times\endnote{%
   ``Multilingual'' is definitely one word.
   \Verb!https://en.wikipedia.org/wiki/Run_time_(program_lifecycle_phase)!
 }
-which lay down a common layer for languages to use each others
-functions.
+which lay down a common layer for languages to use each others functions.
 An example for this is the Microsoft common language runtime (CLR) \cite{website:clrwiki} which is an
 implementation of the common language infrastructure (CLI) standard \cite{website:cliwiki}.
 
@@ -203,18 +197,14 @@ modified at compile time which allows playing with the code and going back and f
   The preceding sentence needs fixing.
 }
 
-A specific tool used in meta programming is quasi-quotation
-\cite{mainland2007s,haskellquasi,wikiquasi},
-which permits
-\progLang{Haskell} expressions and patterns to be constructed using domain specific, pro\-gram\-mer-de\-fined concrete
-syntax.
+A specific tool used in meta programming is quasi-quotation \cite{mainland2007s,haskellquasi,wikiquasi}, which
+permits \progLang{Haskell} expressions and patterns to be constructed using domain specific,
+pro\-gram\-mer-de\-fined concrete syntax.
 For example, consider a particular application that requires a complex data type.
 To accommodate the same it has to represented\endnote{%
   \textit{has to represented}: Do you mean ``\textsl{must be represented}''?
 }
-using \progLang{Haskell} syntax and performing
-pattern matching may
-turn into a tedious task.
+using \progLang{Haskell} syntax and performing pattern matching may turn into a tedious task.
 So having the option of using specific syntax reduces the programmer from this burden and this is where a
 quasi-quoter comes into the picture.
 Template \progLang{Haskell} provides the facilities mentioned above.
@@ -230,8 +220,7 @@ append([X|Xs], Ys, [X|Zs]) :- append(Xs, Ys, Zs).
 \label{fig:append-prolog}
 \end{code-list}
 going through the code, the first rule says that and empty list appended with any list results in the list itself.
-The second predicate matches the head of the first and the resulting
-lists and then recurses on the tails. 
+The second predicate matches the head of the first and the resulting lists and then recurses on the tails.
 The same in \progLang{Haskell},\endnote{%
   \david{Is the point here that templating helps, or what?}\newline
   \mehul{it is just one of the many ways to bring the languages together}\newline
